--- a/frontend/studente/src/pages/addActivity/addActivity.html
+++ b/frontend/studente/src/pages/addActivity/addActivity.html
@@ -56,7 +56,7 @@
     </ion-col>
       <ion-col col-6>
         <ion-item>
-          <input id = "uploadInputFile"  type="file" ng2FileSelect [uploader]="uploader" />
+          <input id = "uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
         </ion-item>
       </ion-col>
        <ion-col col-3>
