--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -54,7 +54,7 @@
     </ion-col>
       <ion-col col-6>
         <ion-item>
-          <input id = "uploadInputFile"  type="file" ng2FileSelect [uploader]="uploader" />
+          <input id = "uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
         </ion-item>
       </ion-col>
        <ion-col col-3>
@@ -63,51 +63,6 @@
 
     </ion-row>
 
-<!--
-    <ion-row *ngIf="certificate.documentUri!=null">
-          <ion-col ><ion-label>{{'certificate'|translate}}</ion-label></ion-col><ion-col> <ion-item>  {{certificate.documentUri}}
-
-    </ion-item></ion-col>
-    </ion-row>
--->
-<!--
-     <tr *ngFor="let item of uploader.queue">
-                                    <td><strong>{{ item.file.name }}</strong></td>
-                                    <td nowrap>{{ item.file.size/1024/1024 | number:'.2' }} MB</td>
-                                    <td>
-                                        <div class="progress" style="margin-bottom: 0;">
-                                            <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }"></div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center">
-                                        <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                                        <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                                        <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                                    </td>
-                                    <td nowrap>
--->
-<!--
-                                        <button type="button" class="btn btn-success btn-xs"
-                                                (click)="uploadCertificate(item)" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                                            <span class="glyphicon glyphicon-upload"></span> Upload
-                                        </button>
--->
-<!--
-                                        <button type="button" class="btn btn-warning btn-xs"
-                                                (click)="item.cancel()" [disabled]="!item.isUploading">
-                                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                                        </button>
--->
-<!--
-                                        <button type="button" class="btn btn-danger btn-xs"
-                                                (click)="item.remove()">
-                                            <span class="glyphicon glyphicon-trash"></span> Remove
-                                        </button>
--->
-<!--
-                                    </td>
-                                </tr>
--->
       <ion-row>
  <ion-col><button  class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
