--- a/frontend/studente/src/pages/addStage/addStage.html
+++ b/frontend/studente/src/pages/addStage/addStage.html
@@ -54,7 +54,7 @@
     </ion-col>
       <ion-col col-6>
         <ion-item>
-          <input id = "uploadInputFile"  type="file" ng2FileSelect [uploader]="uploader" />
+          <input id = "uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
         </ion-item>
       </ion-col>
        <ion-col col-3>
@@ -66,5 +66,4 @@
  <ion-col><button  class="action-button " ion-button block (click)="addStage()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
-
 </ion-content>
