--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -148,23 +148,26 @@
           <button class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
         </ion-col>
       </ion-row>-->
-      <ion-row *ngFor="let doc of documents">
+      <ion-row *ngFor="let doc of documents;let i = index">
         <ion-col col-3>
           <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
         </ion-col>
-        <ion-col col-3>
-          <ion-item>
+        <!--<ion-col col-3>
+          <ion-item *ngIf="doc.documentUri">
             <a download="document.txt" class="button label-button" href="{{ doc.documentUri}}">
               <ion-icon name="md-download"></ion-icon>
             </a>
 
           </ion-item>
+        </ion-col>-->
+         <ion-col col-3>
+          <ion-label>{{doc.documentUri}}</ion-label>
         </ion-col>
            <ion-col col-3>
           <ion-label>{{doc.attributes.name}}</ion-label>
         </ion-col> 
         <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
         </ion-col>
       </ion-row>
 
@@ -184,17 +187,22 @@
               [(ngModel)]="document.attributes.name"></ion-input>
           </ion-item>
         </ion-col>
-        <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
+                <ion-col>
+          <button ion-button clear icon-only (click) = "addDocument()">
+      <ion-icon name='md-add-circle' is-active="false"></ion-icon>
+    </button>
         </ion-col>
+        <!--<ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
+        </ion-col>-->
       </ion-row>
-      <ion-row>
+      <!--<ion-row>
         <ion-col>
           <button ion-button clear icon-only (click) = "addDocument()">
       <ion-icon name='md-add-circle' is-active="false"></ion-icon>
     </button>
         </ion-col>
-      </ion-row>
+      </ion-row>-->
       <ion-row>
         <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
         <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
