--- a/frontend/studente/src/pages/certifications/certification.html
+++ b/frontend/studente/src/pages/certifications/certification.html
@@ -6,29 +6,37 @@
 <div padding *ngIf="opened">
   <!--<div padding>-->
   <div class="experience-title" *ngIf="certification.experience.attributes.dateFrom"> <span class="registration-institute-label">{{'document_dateFrom_label'|translate}}</span>{{certification.experience.attributes.dateFrom
-    |date}}</div>
+    |date}}
+  </div>
   <div class="experience-title" *ngIf="certification.experience.attributes.dateTo"> <span class="registration-institute-label">{{'document_dateTo_label'|translate}}</span>{{certification.experience.attributes.dateTo
-    |date}}</div>
+    |date}}
+  </div>
   <div class="experience-title" *ngIf="certification.experience.attributes.location"> <span class="registration-institute-label">{{'document_location_label'|translate}}</span>{{certification.experience.attributes.location}}</div>
   <div class="experience-title" *ngIf="certification.experience.attributes.certifier"> <span class="registration-institute-label">{{'document_certifier_label'|translate}}</span>{{certification.experience.attributes.certifier}}</div>
   <div class="experience-title" *ngIf="certification.experience.attributes.description"> <span class="registration-institute-label">{{'document_description_label'|translate}}</span>{{certification.experience.attributes.description}}</div>
   <div *ngIf="isLanguageDocument()">
-      <div class="experience-title" *ngIf="certification.experience.attributes.lang"> <span class="registration-institute-label">{{'document_lang_label'|translate}}</span>{{certification.experience.attributes.lang}}</div>
-      <div class="experience-title" *ngIf="certification.experience.attributes.level"> <span class="registration-institute-label">{{'document_level_label'|translate}}</span>{{certification.experience.attributes.level}}</div>
+    <div class="experience-title" *ngIf="certification.experience.attributes.lang"> <span class="registration-institute-label">{{'document_lang_label'|translate}}</span>{{certification.experience.attributes.lang}}</div>
+    <div class="experience-title" *ngIf="certification.experience.attributes.level"> <span class="registration-institute-label">{{'document_level_label'|translate}}</span>{{certification.experience.attributes.level}}</div>
   </div>
-<ion-row class="experience-title" *ngIf="certification.document!=null && certification.document.documentPresent">
-    <ion-col col-3>
-      <ion-label>{{'document_document_label'|translate}}
-      </ion-label>
-    </ion-col>
-    <ion-col col-6>
-      <ion-item>
-        <a download="document.txt" class="button label-button" href="{{ certification.document.documentUri}}">
-          <ion-icon name="md-download"></ion-icon>
-        </a>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+  <ng-container *ngFor="let doc of certification.documents">
+    <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
+      <ion-col col-3>
+        <ion-label>{{'document_document_label'|translate}}
+        </ion-label>
+      </ion-col>
+      <ion-col col-3>
+        <ion-label>{{doc.attributes.name}}
+        </ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <a download="document.txt" class="button label-button" href="{{doc.documentUri}}">
+            <ion-icon name="md-download"></ion-icon>
+          </a>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ng-container>
   <div class="experience-action-buttons" *ngIf="!certification.experience.attributes.institutional">
     <button class="label-button" ion-button clear (click)="deleteCertification()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateCertification()">{{'update_button'|translate}}</button>
@@ -40,7 +48,8 @@
     <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="(certification.document!=null && certification.document.documentPresent)">
         {{'modify_document_button'|translate}}
     </button>
-    <button *ngIf="(certification.document!=null && certification.document.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">
+    <button *ngIf="(certification.document!=null && certification.document.documentPresent)" class="button-add-stage label-button"
+      ion-button clear (click)="removeActualDocument()">
         {{'addDocument_remove_actual_document_label'|translate}}
         </button>
   </div>
