--- a/frontend/studente/src/pages/curriculum/curriculum.html
+++ b/frontend/studente/src/pages/curriculum/curriculum.html
@@ -43,74 +43,199 @@
     </ion-row>
 
     <ion-row>
-        <ion-label padding>{{'profile_birthday_label'|translate}}:  {{student.birthdate}}</ion-label>
+      <ion-label padding>{{'profile_birthday_label'|translate}}: {{student.birthdate}}</ion-label>
     </ion-row>
   </div>
 
   <div class="curriculum div">
     <ion-row>
-      <ion-label padding>{{'cv_experience_label'|translate}}</ion-label>
+      <ion-label padding class="key">{{'cv_experience_label'|translate}}</ion-label>
       <ion-label padding class="curriculum link" *ngIf="(experiences && experiences.length>0)" (click)="selectAll(experiences)">Seleziona tutto</ion-label>
     </ion-row>
+
     <ion-list *ngIf="(experiences && experiences.length>0)">
-      <ion-item *ngFor="let experience of experiences;">
-        <ion-label>{{experience.experience.attributes.id}}</ion-label>
-        <ion-label>{{experience.experience.attributes.instituteId}}</ion-label>
-        <ion-checkbox checked="false" [(ngModel)]="experience.checked" (click)="toggle($event,experience)" item-right></ion-checkbox>
-      </ion-item>
+
+      <div padding *ngFor="let experience of experiences;" class="curriculum div">
+        <ion-row>
+          <ion-col>
+            <label>{{ experience.experience.attributes.dateFrom | localizedDate:'MMM yyyy' }} - {{ experience.experience.attributes.dateTo | localizedDate:'MMM yyyy' }} </label>
+          </ion-col>
+          <ion-col>
+            <label>{{experience.experience.attributes.title}}</label>
+          </ion-col>
+          <ion-col>
+            <div class="curriculm div-checkbox">
+              <ion-checkbox checked="false" [(ngModel)]="experience.checked" (click)="toggle($event,experience)"></ion-checkbox>
+            </div>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label *ngIf="experience.experience.attributes.contact">{{experience.experience.attributes.contact}} - {{experience.experience.attributes.location}}</label>
+            <label *ngIf="!experience.experience.attributes.contact">{{experience.experience.attributes.location}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label>{{experience.experience.attributes.description}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+      </div>
+
     </ion-list>
+
     <ion-item *ngIf="(experiences && experiences.length==0)">
-        {{'cv_empty_experience_label'|translate}}
+      {{'cv_empty_experience_label'|translate}}
     </ion-item>
   </div>
 
   <div class="curriculum div">
     <ion-row>
-      <ion-label padding>{{'cv_training_label'|translate}}</ion-label>
+      <ion-label padding class="key">{{'cv_training_label'|translate}}</ion-label>
       <ion-label padding class="curriculum link" *ngIf="(trainings && trainings.length>0)" (click)="selectAll(trainings)">Seleziona tutto</ion-label>
     </ion-row>
-    <ion-list *ngIf="(trainings && trainings.length>0)">
-      <ion-item *ngFor="let training of trainings;">
-        <ion-label>{{training.experience.attributes.id}}</ion-label>
-        <ion-label>{{training.experience.attributes.instituteId}}</ion-label>
-        <ion-checkbox checked="false" [(ngModel)]="training.checked" (click)="toggle($event,training)" item-right></ion-checkbox>
-      </ion-item>
+
+    <ion-list *ngIf="(registrations && registrations.length>0)">
+
+      <div padding *ngFor="let registration of registrations;" class="curriculum div">
+      
+        <!-- <ion-row>
+          <ion-col>
+            <label>{{ registration.dateFrom | localizedDate:'MMM yyyy' }} - {{ registration.dateTo | localizedDate:'MMM yyyy' }} </label>
+          </ion-col>
+          <ion-col>
+            <label>{{registration.course}}</label>
+          </ion-col>
+          <ion-col>
+            <div class="curriculm div-checkbox">
+              <ion-checkbox checked="false" [(ngModel)]="registration.checked" (click)="toggle($event,registration)"></ion-checkbox>
+            </div>
+          </ion-col>
+        </ion-row> -->
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label *ngIf="registration.teachingUnit.name">{{registration.teachingUnit.name}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label *ngIf="registration.institute.name">{{registration.institute.name}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+      </div>
+
     </ion-list>
-    <ion-item *ngIf="(trainings && trainings.length==0)">
-        {{'cv_empty_training_label'|translate}}
+
+    <ion-list *ngIf="(trainings && trainings.length>0)">
+
+      <div padding *ngFor="let training of trainings;" class="curriculum div">
+        <ion-row>
+          <ion-col>
+            <label>{{ training.experience.attributes.dateFrom | localizedDate:'MMM yyyy' }} - {{ training.experience.attributes.dateTo | localizedDate:'MMM yyyy' }} </label>
+          </ion-col>
+          <ion-col>
+            <label>{{training.experience.attributes.title}}</label>
+          </ion-col>
+          <ion-col>
+            <div class="curriculm div-checkbox">
+              <ion-checkbox checked="false" [(ngModel)]="training.checked" (click)="toggle($event,training)"></ion-checkbox>
+            </div>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label *ngIf="training.experience.attributes.lang">{{training.experience.attributes.lang}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <label *ngIf="training.experience.attributes.location">{{training.experience.attributes.location}}</label>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+
+      </div>
+
+    </ion-list>
+
+    <ion-item *ngIf="(trainings && trainings.length==0 && registrations && registrations.length==0)">
+      {{'cv_empty_training_label'|translate}}
     </ion-item>
   </div>
 
   <div class="curriculum div">
     <ion-row>
-      <ion-label padding>{{'cv_skills_label'|translate}}</ion-label>
+      <ion-label padding class="key">{{'cv_skills_label'|translate}}</ion-label>
       <ion-label padding class="curriculum link" *ngIf="(skills && skills.length>0)" (click)="selectAll(skills)">Seleziona tutto</ion-label>
     </ion-row>
     <ion-list *ngIf="(skills && skills.length>0)">
-      <ion-item *ngFor="let skill of skills;">
+      <!-- <ion-item *ngFor="let skill of skills;">
         <ion-label>{{skill.experience.attributes.id}}</ion-label>
         <ion-label>{{skill.experience.attributes.instituteId}}</ion-label>
         <ion-checkbox checked="false" [(ngModel)]="skill.checked" (click)="toggle($event,skill)" item-right></ion-checkbox>
-      </ion-item>
+      </ion-item> -->
+      <div padding *ngFor="let skill of skills;" class="curriculum div">
+          <ion-row>
+            <ion-col>
+              <label>{{skill.experience.attributes.lang}} </label>
+            </ion-col>
+            <ion-col>
+              <label>{{skill.experience.attributes.title}}</label>
+            </ion-col>
+            <ion-col>
+              <div class="curriculm div-checkbox">
+                <ion-checkbox checked="false" [(ngModel)]="skill.checked" (click)="toggle($event,skill)"></ion-checkbox>
+              </div>
+            </ion-col>
+          </ion-row>
+  
+          <ion-row>
+            <ion-col></ion-col>
+            <ion-col>
+              <label *ngIf="skill.experience.attributes.level">{{skill.experience.attributes.level}}</label>
+            </ion-col>
+            <ion-col></ion-col>
+          </ion-row>
+        </div>
     </ion-list>
     <ion-item *ngIf="(skills && skills.length==0)">
-        {{'cv_empty_skills_label'|translate}}
+      {{'cv_empty_skills_label'|translate}}
     </ion-item>
   </div>
 
   <div class="curriculum div">
     <ion-row>
-      <ion-label padding>ALLEGATI</ion-label>
+      <ion-label padding class="key">ALLEGATI</ion-label>
       <ion-label padding class="curriculum link" *ngIf="(attachments && attachments.length>0)" (click)="selectAll(attachments)">Seleziona tutto</ion-label>
     </ion-row>
     <ion-list *ngIf="(attachments && attachments.length>0)">
       <ion-item *ngFor="let attachment of attachments;">
-        <ion-label>{{attachment.experience.attributes.id}}</ion-label>
+        <ion-label *ngIf="attachment.attributes.title">{{attachment.experience.attributes.title}}</ion-label>
+        <ion-label *ngIf="!attachment.attributes.title && attachment.filename">{{attachment.experience.filename}}</ion-label>
         <ion-checkbox checked="false" [(ngModel)]="attachment.checked" (click)="toggle($event,attachment)" item-right></ion-checkbox>
       </ion-item>
     </ion-list>
     <ion-item *ngIf="(attachments && attachments.length==0)">
-        {{'cv_empty_attachment_label'|translate}}
+      {{'cv_empty_attachment_label'|translate}}
     </ion-item>
   </div>
 
