--- a/frontend/studente/src/pages/certifications/certification.html
+++ b/frontend/studente/src/pages/certifications/certification.html
@@ -30,10 +30,7 @@
       </ion-col>
       <ion-col col-6>
         <ion-item>
-            <!-- href="{{doc.documentUri}} -->
-          <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
-            <ion-icon name="md-download"></ion-icon>
-          </a>
+          <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
     </ion-row>
