--- a/frontend/studente/src/pages/profile/profile.html
+++ b/frontend/studente/src/pages/profile/profile.html
@@ -43,13 +43,16 @@
     <ion-row>
       <ion-col>
         <span> {{'profile_name_label'|translate}}</span>
-        <span class="profile-field" *ngIf="student.name" >{{student.name}}</span>
+        <span class="profile-field" *ngIf="student.name">{{student.name}}</span>
       </ion-col>
       <ion-col>
-        <span>{{'profile_tel_label'|translate}}</span><span class="profile-field" *ngIf="!editMode && student.phone">{{student.phone}}</span>
-        <ion-item *ngIf="editMode" class="profile-input">
-          <ion-input type="text" placeholder="{{'profile_tel_input_placeholder'|translate}}" [(ngModel)]="student.phone"></ion-input>
-        </ion-item>
+        <span class="span-input">{{'profile_tel_label'|translate}}</span>
+        <span class="profile-field" *ngIf="!editMode && student.phone">{{student.phone}}</span>
+        <span>
+          <ion-item *ngIf="editMode" class="profile-input">
+            <ion-input type="text" placeholder="{{'profile_tel_input_placeholder'|translate}}" [(ngModel)]="student.phone"></ion-input>
+          </ion-item>
+        </span>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -58,10 +61,13 @@
         <span class="profile-field" *ngIf="student.surname">{{student.surname}}</span>
       </ion-col>
       <ion-col>
-        {{'profile_cel_label'|translate}}<span *ngIf="!editMode && student.mobilePhone" class="profile-field">{{student.mobilePhone}}</span>
-        <ion-item *ngIf="editMode" class="profile-input">
-          <ion-input type="text" placeholder="{{'profile_cel_input_placeholder'|translate}}" [(ngModel)]="student.mobilePhone"></ion-input>
-        </ion-item>
+        <span class="span-input">{{'profile_cel_label'|translate}}</span>
+        <span *ngIf="!editMode && student.mobilePhone" class="profile-field">{{student.mobilePhone}}</span>
+        <span>
+          <ion-item *ngIf="editMode" class="profile-input">
+            <ion-input type="text" placeholder="{{'profile_cel_input_placeholder'|translate}}" [(ngModel)]="student.mobilePhone"></ion-input>
+          </ion-item>
+        </span>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -70,10 +76,13 @@
         <span class="profile-field" *ngIf="student.cf">{{student.cf}}</span>
       </ion-col>
       <ion-col>
-        {{'profile_mail_label'|translate}} <span *ngIf="!editMode && student.email" class="profile-field">{{student.email}}</span>
-        <ion-item *ngIf="editMode" class="profile-input">
-          <ion-input type="text" placeholder="{{'profile_mail_input_placeholder'|translate}}" [(ngModel)]="student.email"></ion-input>
-        </ion-item>
+        <span class="span-input">{{'profile_mail_label'|translate}}</span>
+        <span *ngIf="!editMode && student.email" class="profile-field">{{student.email}}</span>
+        <span>
+          <ion-item *ngIf="editMode" class="profile-input">
+            <ion-input type="text" placeholder="{{'profile_mail_input_placeholder'|translate}}" [(ngModel)]="student.email"></ion-input>
+          </ion-item>
+        </span>
       </ion-col>
     </ion-row>
     <ion-row>
